Fixed sport page columns / spacing

--- a/app/assets/stylesheets/beta/containers/sports-standings.css.sass
+++ b/app/assets/stylesheets/beta/containers/sports-standings.css.sass
@@ -1,4 +1,6 @@
 .standings
+  h3
+    margin-top: 0.5rem
   .content-container
     .league
       table
